@@ -56,7 +56,7 @@ plotExplanatoryVariables <- function(object, nvars_to_plot = 10, min_marginal_r2
         ylab("Density") +
         coord_cartesian(xlim = c(10 ^ (-3), 100))
 
-    plot_out <- .resolve_plot_colours(plot_out, df_to_plot$Expl_Var, "")
+    plot_out <- .resolve_plot_colours(plot_out, df_to_plot$Expl_Var, "", colour = TRUE)
 
     if ( requireNamespace("cowplot", quietly = TRUE) ) {
         plot_out <- plot_out + cowplot::theme_cowplot(theme_size)
